Mirroring/echo-server-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"echo-server-v2","namespace":"default"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"echo-server","version":"v2"}},"template":{"metadata":{"labels":{"app":"echo-server","version":"v2"}},"spec":{"containers":[{"image":"ealen/echo-server","name":"echo","ports":[{"containerPort":80}]}]}}}}
  creationTimestamp: "2025-11-23T07:31:46Z"
  generation: 1
  name: echo-server-v2
  namespace: default
  resourceVersion: "2144"
  uid: a8f953da-8642-40ba-97c4-bf358083ccd5
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: echo-server
      version: v2
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: echo-server
        version: v2
    spec:
      containers:
      - image: ealen/echo-server
        imagePullPolicy: Always
        name: echo
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2025-11-23T07:31:52Z"
    lastUpdateTime: "2025-11-23T07:31:52Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2025-11-23T07:31:46Z"
    lastUpdateTime: "2025-11-23T07:31:52Z"
    message: ReplicaSet "echo-server-v2-7dd8994465" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
